<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_upcoming_events_activity"
    tools:context=".events_details.presentation.EventDetailsActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_event_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/activity_event_details_back_to_previous_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_bold"
            android:layout_margin="@dimen/view_margin_16x"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_white"
            android:layout_gravity="center"
            />

        <ImageView
            android:id="@+id/activity_event_details_favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/activity_event_details_ic_like_border"
            android:layout_gravity="end"
            android:layout_margin="@dimen/view_margin_16x"
            />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_event_details_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/speaker_image"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                tools:background="@drawable/activity_event_details_speaker_photo"
                />

            <TextView
                android:id="@+id/speaker_is_invited_text_view"
                android:background="@drawable/bg_activity_event_details_speaker_invited_state_text_view"
                android:paddingHorizontal="@dimen/view_padding_6x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/activity_event_details_is_invited_text"
                android:textColor="@color/white"
                android:enabled="true"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/activity_event_details_view_text_size_13x"
                android:layout_marginTop="@dimen/view_margin_16x"
                android:layout_marginLeft="@dimen/view_margin_16x"
                />

            <TextView
                android:id="@+id/activity_event_details_speaker_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/activity_event_details_speaker_name"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_event_details_view_text_size_18x"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginTop="@dimen/view_margin_8x"
                android:layout_marginHorizontal="@dimen/view_margin_16x"
                />
            
            <TextView
                android:id="@+id/activity_event_details_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/activity_event_details_speaker_job"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_event_details_view_text_size_13x"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginHorizontal="@dimen/view_margin_16x"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_event_details_view_height"
                android:background="@color/white"
                android:layout_marginTop="@dimen/view_margin_16x"
                android:layout_marginHorizontal="@dimen/view_margin_16x"
                />

            <TextView
                android:id="@+id/activity_event_details_time_start_end_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/activity_event_details_start_end_place"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_event_details_view_text_size_14x"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginHorizontal="@dimen/view_margin_16x"
                android:layout_marginVertical="@dimen/view_margin_16x"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_event_details_view_height"
                android:background="@color/white"
                android:layout_marginHorizontal="@dimen/view_margin_16x"
                />

            <TextView
                android:id="@+id/activity_event_details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/activity_event_details_title"
                android:lineSpacingExtra="@dimen/activity_event_details_line_height_text_view_12x"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_event_details_view_text_size_18x"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginHorizontal="@dimen/view_margin_16x"
                android:layout_marginVertical="@dimen/view_margin_16x"
                />

            <TextView
                android:id="@+id/activity_event_details_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/activity_event_content"
                android:lineSpacingExtra="@dimen/activity_event_details_line_height_text_view_8x"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_event_details_view_text_size_14x"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginHorizontal="@dimen/view_margin_16x"
                android:layout_marginBottom="@dimen/view_margin_21x"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/activity_event_details_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_centerInParent="true"
        />

</RelativeLayout>